src/pages/Attendence/attendence.css
.ion-tool-bar {
    --background: rgb(255, 255, 255);
    color: var(--text-color);
    min-height: 60px;
}

.row{
    color: var(--text-color);

}

.scan-bg  {
    --background: rgb(255, 255, 255);
}

.scanned-content {
    color: var(--text-color);
    display: flex;
    height: calc(100vh - 60px);
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 30px;
}

.hideBg::part(::backdrop){
    display: none;
}

.scan-box{
    border: 2px solid #fff;
    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
    content: "";
    display: block;
    left: 50%;
    height: 300px;
    position: absolute;
    top: 50%;
    width: 300px;
    transform: translate(-50%, -50%);
}

.attendence-container {
    background-color: var(--bg-color);
    color: var(--text-color);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    font-size: 20px;
    padding: 20px;
    height: 100%;
}

.ion-color-success, .ion-color-danger {
    --ion-color-contrast: white !important;
    --border-radius: 20px !important;
    width: 168px;
}
.ion-color-success { --ion-color-base: #0A7115 !important; }
.ion-color-danger { --ion-color-base: #FF0F00 !important; }

